[tool.poetry]
name = "pyservos"
version = "2.0.0"
description = "Yet another dynamixel python driver"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/pyservos/"
repository = 'http://github.com/MultipedRobotics/pyservos'
# documentation = "http://..."
keywords = ["ax-12", "ax12", "xl430", "xl320", "dynamixel", "servo", "smart"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

# [tool.poetry.scripts]
# # script_name = 'myscript:main'
# servoAX12 = "bin/servoAX12:main"

[tool.poetry.dependencies]
python = ">=3.6"
pyserial = "^3.4"
colorama = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "*"

# [mypy-pi_servo_serial]
# ignore_missing_imports = True

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
